test/haskell2010/conformance/negative/bad-module-import.hs
module Main where

import MissingModule

main = 0
